--- a/docs/señor chocolatoso.css
+++ b/docs/señor chocolatoso.css
@@ -1,9 +1,9 @@
 @media only screen and (max-width: 480px){
 	nav {
-		width: 0;
+		width: 1px;
 	}
 
-	.logo {
+	.titulo {
 		width: 100%
 		justify-content: center;
 	}
