--- a/docs/señor chocolatoso.css
+++ b/docs/señor chocolatoso.css
@@ -1,11 +1,11 @@
 @media only screen and (max-width: 480px){
 	nav {
-		width: 1%;
 		visibility: hidden;
 	}
 
 	.titulo {
 		width: 100%;
+		z-index: 10;
 		
 	}
 
