--- a/docs/señor chocolatoso.css
+++ b/docs/señor chocolatoso.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 480px){
-	nav a{
+	nav {
 		visibility: hidden;
 	}
 
@@ -7,6 +7,7 @@
 		width: 100%;
 		z-index: 10;
 		text-align: center;
+		background-color: red;
 	}
 
 	header{
