--- a/docs/señor chocolatoso.css
+++ b/docs/señor chocolatoso.css
@@ -4,12 +4,20 @@
 		background-color: green;
 	}
 
+	nav a {
+		background-color: yellow;
+	}
+
 	.titulo {
 		width: 99%;
 		z-index: 10;
 		text-align: center;
 		justify-content: center;
 		background-color: red;
+	}
+
+	.tituloi {
+		background-color: blue;
 	}
 
 	header{
