--- a/docs/señor chocolatoso.css
+++ b/docs/señor chocolatoso.css
@@ -1,7 +1,7 @@
-@media only screen and (min-width: 480px){
+@media only screen and (max-width: 480px){
 	nav {
 		background-color: green;
-		text-indent: 999px;
+		text-indent: -2000px;
 	}
 
 	.tituloi {
